theme: fixing whitespace on code examples

--- a/themes/mongodb/static/bootstrap-custom.css
+++ b/themes/mongodb/static/bootstrap-custom.css
@@ -79,9 +79,6 @@ samp {
   font-family: monospace, serif;
   font-size: 1em;
 }
-pre {
-  white-space: pre-wrap;
-}
 q {
   quotes: "\201C" "\201D" "\2018" "\2019";
 }
@@ -522,10 +519,10 @@ dd {
   .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .dl-horizontal dd:after {
     clear: both;
@@ -534,10 +531,10 @@ dd {
   .dl-horizontal dd:after {
     content: " ";
     /* 1 */
-  
+
     display: table;
     /* 2 */
-  
+
   }
   .dl-horizontal dd:after {
     clear: both;
